[package]
authors = ['RBB S.r.l <https://github.com/mintlayer>']
build = 'build.rs'
description = 'The Mintlayer core node'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'mintlayer-core'
repository = 'https://github.com/mintlayer/core'
version = '0.1.0'

[[bin]]
name = 'mintlayer-core'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'
mintlayer-runtime = {version = '3.0.0', path = '../runtime'}
pallet-utxo-rpc = { path = "../pallets/utxo/rpc" }
pallet-utxo-rpc-runtime-api = { path = "../pallets/utxo/rpc/runtime-api" }
log = "0.4.8"
ureq = "2.2.0"

[dependencies.serde_json]
version = '1.0.45'
default-features = false
features = ['alloc']

[dependencies.serde]
version = '1.0.130'
default-features = false
features = ['derive']

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-finality-grandpa-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
version = "0.10.0-dev"
branch = "master"

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
version = "0.10.0-dev"
branch = "master"

[dependencies.sc-consensus-babe-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = "0.10.0-dev"
branch = "master"

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'
branch = "master"

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.pallet-contracts-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = "4.0.0-dev"
branch = "master"

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
version = "0.10.0-dev"
branch = "master"

# local dependencies
# bls_sigs_ref = {version = '0.3.0', path = '../../BLS'}

[features]
default = []
runtime-benchmarks = ['mintlayer-runtime/runtime-benchmarks']
