[package]
name = "bech32"
version = "0.8.1"
authors = ["Clark Moody"]
repository = "https://github.com/rust-bitcoin/rust-bech32"
description = "Encodes and decodes the Bech32 format"
readme = "README.md"
keywords = ["base32", "encoding", "bech32"]
categories = ["encoding"]
license = "MIT"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
version = "4.0.0-dev"
branch = "master"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
version = "4.0.0-dev"
branch = "master"

[features]
default = ['std']
testcontext = []
std = [
	"sp-std/std",
	"frame-support/std",
]
